added a route to classify CFI based in ISIN in DB, removed and endpoint
